fix: give scrolltop button opaque background for better visibility

--- a/src/main/webapp/uii/template/css/src/components/_scrolltop.scss
+++ b/src/main/webapp/uii/template/css/src/components/_scrolltop.scss
@@ -1,4 +1,5 @@
 .scroll-top {
+    background: white;
     color: var(--clr-primary-400);
     position: sticky;
     right: 1rem;
